--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -5,24 +5,17 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   security:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
-      
-      - name: Install Snyk
-        run: npm install -g snyk
-      
-      - name: Verificar archivos del directorio
-        run: ls -la
-      
-     # La acción oficial automáticamente sincroniza con el dashboard
+      # La acción oficial automáticamente sincroniza con el dashboard
       - name: Run Snyk Security Scan
         uses: snyk/actions@master
         continue-on-error: true
@@ -32,12 +25,8 @@ jobs:
           command: code test
           args: --sarif-file-output=snyk-code.sarif
       
-      # Opcional: Analizar contenedores Docker si los usas
-      - name: Run Snyk to check Docker
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: |
-          if [ -f "Dockerfile" ]; then
-            snyk container test $(docker build -q .)
-          fi
-        continue-on-error: true
+      - name: Upload to GitHub Security
+        uses: github/codeql-action/upload-sarif@v2
+        if: always()
+        with:
+          sarif_file: snyk-code.sarif
